--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Copied from https://github.com/GoogleChrome/webplatform-samples/blob/master/webspeechdemo/webspeechdemo.html */
 * {
     font-family: Verdana, Arial, sans-serif;
 }
