--- a/style.css
+++ b/style.css
@@ -1,35 +1,4 @@
 /* Copied from https://github.com/GoogleChrome/webplatform-samples/blob/master/webspeechdemo/webspeechdemo.html */
-* {
-    font-family: Verdana, Arial, sans-serif;
-}
-a:link {
-    color:#000;
-    text-decoration: none;
-}
-a:visited {
-    color:#000;
-}
-a:hover {
-    color:#33F;
-}
-.button {
-    background: -webkit-linear-gradient(top,#008dfd 0,#0370ea 100%);
-    border: 1px solid #076bd2;
-    border-radius: 3px;
-    color: #fff;
-    display: none;
-    font-size: 13px;
-    font-weight: bold;
-    line-height: 1.3;
-    padding: 8px 25px;
-    text-align: center;
-    text-shadow: 1px 1px 1px #076bd2;
-    letter-spacing: normal;
-}
-.center {
-    padding: 10px;
-    text-align: center;
-}
 .final {
     color: black;
     padding-right: 3px; 
@@ -42,16 +11,6 @@ a:hover {
     text-align: center;
     color: #777;
     display: none;
-}
-.right {
-    float: right;
-}
-.sidebyside {
-    display: inline-block;
-    width: 45%;
-    min-height: 40px;
-    text-align: left;
-    vertical-align: top;
 }
 #headline {
     font-size: 40px;
@@ -71,8 +30,22 @@ a:hover {
     text-align: left;
     min-height: 150px;
 }
-#start_button {
-    /*border: 0;*/
-    background-color:transparent;
-    padding: 0;
+/* Sticky footer styles
+ * See: https://getbootstrap.com/examples/sticky-footer/
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
